--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,6 +63,12 @@ html, body {
     backdrop-filter: blur(10px);
 }
 
+/* styles for logo */
+#logo{
+  max-height:100%;
+  float:left;
+  margin-left:0px;
+}
 @media only screen and (min-width: 768px) {
     .navbar {
         height: 10vh;
